# idealista-project

./: .gitignore  README.md  dev.Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/airflow-etl/: devcontainer.json
.devcontainer/predictors/: devcontainer.json
.devcontainer/streamlit-ui/: devcontainer.json
.devcontainer/svc-predict-api/: devcontainer.json
.devcontainer/svc-template/: devcontainer.json
airflow-etl/: dev.Dockerfile  pyproject.toml
airflow-etl/deployment/: docker-compose.yaml
airflow-etl/src/dags/: dag.py
airflow-etl/src/dags/modules/: auth.py  pagination.py  retrieve_data.py  search.py
airflow-etl/src/dags/sql/: create_idealista_homes_table.sql  get_all_propertyCodes.sql
deployment/docker-compose/: docker-compose.airflow.yaml  docker-compose.yml
deployment/kubernetes/: 01-postgres-config.yaml  02-postgres-deployment.yaml
prediction-api/src/: app.py
prediction-api/src/pred/: predict.py
prediction-api/src/utils/: schema.py
predictors/: baseline-xgboost.ipynb  baseline.ipynb  dev.Dockerfile  linear_regression.joblib  pyproject.toml
src/: app.py
src/modules/: auth.py  db.py  search.py  transform.py
streamlit-ui/: app.py  dev.Dockerfile  pyproject.toml  xgboost_pipeline.joblib
svc-ml-model/deployment/: docker-compose.yml
svc-predict-api/: Dockerfile  pyproject.toml
svc-predict-api/deployment/: docker-compose.yml
svc-predict-api/src/: app.py
svc-predict-api/src/modules/: docs.py
svc-template/: Dockerfile  README.md  pyproject.toml
svc-template/src/: app.py
