[tool.poetry]
name = "idealista-rent-price-predictor"
version = "1.0.0"
description = ""
authors = [
    "Roberto Hernandez <betohr60@gmail.com>",
    "Jorge Tarancon <>"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "6.21.*"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
psycopg2-binary = "^2.9.8"
scikit-learn = "^1.3.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
