[tool.poetry]
name = "idealista-airflow-etl"
version = "1.0.0"
description = ""
authors = [
    "Roberto Hernandez <betohr60@gmail.com>",
    "Jorge Tarancon <si.jorgetarancon@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "6.21.*"
pandas = "^2.0.3"
apache-airflow = "^2.8.0"
