[tool.poetry]
name = "idealista-predictors"
version = "1.0.0"
description = ""
authors = [
    "Roberto Hernandez <betohr60@gmail.com>",
    "Jorge Tarancon <si.jorgetarancon@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "6.21.*"
pandas = "^2.0.3"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
mlflow = "^2.9.2"
psycopg2-binary = "^2.9.9"
seaborn = "^0.13.2"
