[tool.poetry]
name = "svc-template"
version = "1.0.0"
description = ""
authors = [
    "Roberto Hernandez <betohr60@gmail.com>",
    "Jorge Tarancon <si.jorgetarancon@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipykernel = "6.21.*"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
